# artifact

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check.yml  deploy.yml
app/: __init__.py  main.py  planner.db
app/controller/: __init__.py  note_controller.py  task_controller.py  topic_controller.py
app/db/: __init__.py  database.py  note_dao.py  task_dao.py  topic_dao.py
app/model/: __init__.py  note.py  task.py  topic.py
app/view/: __init__.py  add_note_popup.kv  add_note_popup.py  add_task_popup.kv  add_task_popup.py  add_topic_popup.kv  add_topic_popup.py  manage_topics_popup.kv  manage_topics_popup.py  nav_bar.kv  nav_bar.py  nav_button.kv  note_item.kv  note_item.py  notebook_screen.kv  notebook_screen.py  notes_screen.kv  notes_screen.py  planner_screen.kv  planner_screen.py  pomodoro_screen.kv  pomodoro_screen.py  schedule_popup.kv  schedule_popup.py  spinner_option.kv  task_item.kv  task_item.py  task_screen.kv  task_screen.py  topic_item.kv  topic_item.py
tests/: conftest.py  test_controller.py  test_dao.py  test_model.py  test_view.py
