[project]
name = "mystudyagenda"
version = "1.1.1"
description = "Desktop application to plan daily tasks, write notes, view planner and set pomodoro timer"
authors = [
    {name = "Anna Campagna",email = "anna.campagna13@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.poetry.dependencies]
kivy = "^2.3.0"
kivymd = { git = "https://github.com/kivymd/KivyMD.git", branch = "master" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{ include = "app" }]